tests/unit/default/syntax-error/044-create-table-parens-name-colon-type-params-null-eq-null.x.t
---- IN ----
+%table(id:decimal(10,2)?=null|
---- OUT ----
---- ERR ----
syntax: expected `)` after `...:decimal(10,2)?=null` near `|` at position 30 - at line 1
---- EXIT ----
1
